--- a/ltx/lit_review.tex
+++ b/ltx/lit_review.tex
@@ -8,6 +8,12 @@
 	
 	\usepackage{epsfig} % if you want figures
 	
+	\usepackage[margin=1.5in]{geometry}
+	
+	\usepackage[numbers]{natbib}
+	
+	
+	
 %	\usepackage{fancyhdr} % These 4 lines are needed to set up the running  header
 %	\fancyhead[LE,RO]{Test Document}
 %	\fancyhead[RE,LO]{\thepage}
@@ -38,38 +44,99 @@
 
 
 
+\subsection*{Some Terminology}
+\vspace{6pt}
+1. Multiple Target Tracking (MTT) \\
+\\
+a.k.a. Multitarget Tracking, Data Association \\
+\\
+Definition: An algorithm that takes as input a collection of data points, where each point represents the center position of an object at a given time, and returns a partition of these points; each element of the partition is comprised of a sequence of data points and represents a target's position at successive points in time. \\
+\\
+\\
+2. Target Detection \\
+\\
+a.k.a. Target Recognition, Target Localization, Target Representation, Target Segmentation, Object Detection \\
+\\
+Definition: The act of deducing whether an image contains a specified target and, if it is present, locating the target's position. \\
+\\
+\\
+3. Visual Multiple Target Tracking (VMTT) \\
+\\
+a.k.a. Video Tracking, Video Multiple Target Tracking, 2D Tracking, Object Tracking, Multi-Object Video Tracking \\
+\\
+Definition: An algorithm that tracks the time-varying positions of multiple targets in a video; it typically involves target detection to find the center position of each target at each point in time, and MTT on the found target centers to accomplish tracking.
+\\
+\\
+
+
+
+
+
 \subsection*{Overview}
 \vspace{6pt}
-The phrase `multiple target tracking' (MTT) has been used to refer to two distinct but related problems: the first is the problem of detecting and tracking the positions of multiple targets of interest in a video, and the second is the problem of associating data points, where each data point is assumed to represent the centroid of some target whose position varies with time. The first is a problem in the field of machine vision and may use data association techniques from the second to accomplish MTT after targets of interest are detected and their positions represented as points.\\
+Visual multiple target tracking (VMTT) involves tracking the positions of multiple targets in a video. VMTT algorithms typically carry out two main tasks: the first is target detection, the task of finding the positions of targets within an image, and the second is multiple target tracking (MTT), the task of grouping the positions into sequences, where each sequence represents a target's position at successive points in time. \\
 \\
-The goal of this project is to apply the generalized Polya urn Dirichlet process mixture model (GPUDPM) to videos containing multiple targets in a way that accomplishes data association without requiring explicit target detection. We hope to allow for a flexible MTT algorithm that can handle videos with different numbers of targets, with diverse backdrops, whose targets display a wide range of characteristics, and where there are time-varying shifts in targets' characteristics, perspectives, or orientations.\\
+MTT algorithms are well studied, and, given the positions of targets in each frame of a video, have been shown to achieve tracking with high accuracy \cite{blackman_2004}. General methods for target detection have had less success. Many current target detection methods are limited to specific types of targets as they perform detection by catering to some unique visual or structural characteristic of the target. These methods are often less robust when applied to targets that change appearance, orientation, or scale, and to scenes with diverse background characteristics. Furthermore, even with a target-specific feature to aid detection, there are often problems with image segmentation (decisions as to where one object ends and a neighboring object begins) and with estimating the number of objects in a scene.  \\
 \\
-The following are summaries of papers focusing on MTT as it relates to the association of target centroids, MTT as it relates to machine vision, and the generalized Polya urn Dirichlet process mixture model.
+The goal of this project is to apply a time dependent Dirichlet process mixture model known as the generalized Polya urn Dirichlet process mixture model (GPUDPM) to videos containing multiple targets in a way that tracks the targets' positions without requiring explicit target detection. We hope to allow for a 	single flexible VMTT algorithm that can be applied to scenes with different numbers of targets, with diverse backgrounds, whose targets display a wider range of visual and structural characteristics, and where there are time-varying shifts in targets' characteristics, perspectives, or orientations.\\
 
 
 
-\subsection*{Data Association Related MTT}
+
+
+
+\subsection*{MTT}
 \vspace{6pt}
-Papers on this topic often involve algorithms that take a set of data, where each point has a time-value and is assumed to represent the centroid position of a target at the given point in time, and aim to return the most probable set of tracks formed by `associating' these data points into sequences.\\
-\\
-In Bar-Shalom's classic MTT survey paper (Tracking Methods in a Multitarget Environment, 1978), he discusses the common algorithms of the time, and how they attempt to overcome issues caused by false positive and true negative data points. Blackman (Multiple Hypothesis Tracking for Multiple Target Tracking, 2004) provides an overview of multiple hypothesis tracking (MHT), a classic and perhaps most-widely-used MTT algorithm, which is extended by many of the machine-vision algorithms described in the following section. Blom and Bloem (Interacting Multiple Model Joint Probabilistic Data Association avoiding track coalescence, 2002) give a good overview of another classic data association algorithm, the joint probabilistic data association filter (JPDA). Pulford (Taxonomy of multiple target tracking methods, 2005), aiming to provide a modern update of Bar-Shalom's paper, gives a thorough overview of `classic' and `modern' data association algorithms (and gives the details of 35 different MTT algorithms). Hue et al. (Sequential Monte Carlo Methods for Multiple Target Tracking and Data Fusion, 2002) introduce particle filters for MTT. Oh et al. (Markov Chain Monte Carlo Data Association for General Multiple-Target Tracking Problems, 2004) uses an MCMC approach to perform general data association. Fox et. al (Nonparametric Bayesian Methods for Large Scale Multi-Target Tracking, 2006) uses a Dirichlet Process prior to estimate the number of targets in an MTT scheme.
+At its most basic, MTT can be approached with the Global Nearest Neighbor (GNN) technique \cite{blackman_2004}, where tracks are formed by associating each observation with its nearest neighbor, under the constraint that an observation can be associated with no more than one track. Often, GNN is performed until a problem such as a conflicting track assignment occurs, whereupon a more sophisticated technique is used. As for these more-complex methods, there are two classic MTT algorithms that form a basis for many modern techniques. The first is called multiple hypothesis tracking (MHT) \cite{singer_1974, reid_1979, blackman_2004}, in which (at its most basic), for each observation, a set of potential neighbors are considered for association; the process is then repeated recursively for each potential neighbor, forming a tree-like structure. Most branches die along the way due to lack of potential neighbors, but eventually (ideally) only one branch remains, and it is considered most-likely to be the true path. MHT is computationally expensive, but has gained popularity in recent times due to increases in computational capabilities \cite{blackman_2004}. The second classic MTT algorithm is known as the Joint Probabilistic Data Association (JPDA) method \cite{barshalom_1975, kirubarajan_2004}. In contrast to GNN, where the nearest potential neighbor is chosen as the associated position, and MHT, where all potential neighbors are followed until only one remains, JPDA computes a probability that each potential neighbor (that pass an initial validation test) is the next position of the current track, and predicts the next position as a probability-weighted combination of all potential positions. In this way, JPDA acts similar to another MTT technique known as Recursive Bayesian Filtering (RBF), where the position of a target at a future step is predicted, and this prediction allows for subsequent points to be associated to a track with higher accuracy. Techniques involving RBF often make use of a Kalman or particle filter, and these methods are often incorporated with the other algorithms mentioned in this section. Pulford \cite{pulford_2005} gives a thorough overview of `classic' and `modern' data association algorithms (and gives the details of 35 different MTT algorithms). Fox et al. \cite{fox_2006} uses a Dirichlet Process prior to estimate the number of targets in an MTT scheme. \\
 
 
 
-\subsection*{Machine Vision Related MTT}
+
+\subsection*{VMTT}
 \vspace{6pt}
-Papers on this topic often involve algorithms that have a target detection phase (where the centroids of potential targets are collected, often by looking for specific target features) and a data association phase (where the centroids are sequenced in order to carry out tracking).\\
-\\
-Qu et al. (Distributed Bayesian Multiple-Target Tracking in Crowded Environments Using Multiple Collaborative Cameras, 2007) term machine vision related MTT `visual multiple-target tracking', and provide a good overview of the topic (the following mirrors this overview). MacCormick and Blake (A Probabilistic Exclusion Principle for Tracking Multiple Objects, 2000) focus on distinguishing between foreground and background objects and propose a probabilistic exclusion principle to help the problem where objects occlude each other (ie where one object overlaps and blocks another). Isard and MacCormick (BraMBLe: A Bayesian Multiple-Blob Tracker, 2001) present a people-tracking algorithm that deduces foreground and background objects probabilistically, without the typical strategy of selecting foreground objects prior to MTT; the authors also talk about ways in which their techniques allow for tracking variable numbers of objects and objects that enter and exit the videos. Zhao and Nevatia (Tracking Multiple Humans in Crowded Environment, 2004) make use of human shape models to better the MTT accuracy when tracking crowds of people. Tao et al. (A Sampling Algorithm for Tracking Multiple Objects) use sampling to perform Bayesian inference and focus on handling occlusion, addition, and deletion of targets. Rasmussen et al. (Probabilistic Data Association Methods for Tracking Complex Visual Objects, 2001) apply a version of the joint probabilistic data association filter to certain shape and texture features they are  able to extract from video targets. Khan et al. (An MCMC-based Particle Filter for Tracking Multiple Interacting Targets, 2004), present an MCMC-based particle filter that also introduces a Markov random field to model the interactions of targets when they are within certain ranges of other targets (applied to videos of ants, arguing that an ant's behavior is highly influenced by nearby ants). Smith et al. (Using Particles to Track Varying Numbers of Interacting People, 2005) present an MCMC particle filter to increase efficiency in the multiple hypothesis tracker, and also incorporate target features such as color into their model. McKenna et al. (Tracking Groups of People, 2000) use color and gradient information to perform background subtraction on videos of people; their model then has a heirarchical structure where groups of occluding people are first tracked, and then later separated to track each person separately, using color information. Yamamoto et al. (Realtime Multiple Object Tracking Based on Optical Flows, 1995) uses optical flows (calculated based on a so called `generalized gradient model' of an image) to carry out multiple target tracking.\\
-\\
+Qu et al. \cite{qu_2007} term computer vision related MTT `visual multiple-target tracking', and give a thorough overview of the topic. MacCormick and Blake \cite{maccormick_1999} focus on distinguishing between foreground and background objects and use it to help perform target detection in videos where objects occlude each other (i.e. where one object overlaps and blocks another). Isard and MacCormick \cite{isard_2001} present a people-tracking algorithm that deduces foreground and background objects probabilistically, without the typical strategy of selecting foreground objects prior to MTT; the authors also talk about ways in which their techniques allow for tracking variable numbers of objects and objects that enter and exit the videos. Zhao and Nevatia \cite{tao_2004} make use of human shape models to better the MTT accuracy when tracking crowds of people. Tao et al. \cite{tao_1999} use sampling to perform Bayesian inference and focus on handling occlusion, addition, and deletion of targets. Rasmussen et al. \cite{rasmussen_2001} apply a version of the joint probabilistic data association filter to certain shape and texture features they are able to extract from video targets (i.e. in the case of conflicting track assignments, successive positions are chosen based on a combination of probabilities of potential positions which are each dependent, in part, upon these shape and texture features). Khan et al. \cite{khan_2005}, present an MCMC-based particle filter that also introduces a Markov random field to model the interactions of targets when they are within certain ranges of other targets (applied to videos of ants, arguing that an ant's behavior is highly influenced by nearby ants). Smith et al. \cite{smith_2005} aim to increase the efficiency in the multiple hypothesis tracker while incorporating target features such as color into their model. McKenna et al. \cite{mckenna_2000} use color and gradient information to perform background subtraction on videos of people; their model then has a heirarchical structure where groups of occluding people are first tracked, and then later separated to track each person separately, using color information. Yamamoto et al. \cite{yamamoto_1995} uses optical flows (calculated based on a so called `generalized gradient model' of an image, which attempts to capture the speed and direction of movement over areas in the image) to carry out multiple target tracking.\\
 
 
 
 
 \subsection*{Generalized Polya Urn Dirichlet Process Mixture Model}
 \vspace{6pt}
-Caron et al. (Generalized Polya Urn for Time-varying Dirichlet Process Mixtures, 2007) introduce this model. Gasthaus et al. (Dependent Dirichlet Process Spike Sorting, 2009) apply this model to the spike-sorting problem.
+Caron et al. \cite{caron_2007} introduce the generalized Polya urn Dirichlet process mixture model. Gasthaus et al. \cite{gasthaus_2008} apply this model to the spike-sorting problem.
 
+
+
+\begin{small}
+\bibliographystyle{plainnat}
+\bibliography{refs_lit_review} 
+\end{small}
+
+
+
+
+
+
+%\subsection*{Overview 2}
+%\vspace{6pt}
+%The phrase `multiple target tracking' (MTT) has been used to refer to two distinct but related problems: the first is the problem of detecting and tracking the positions of multiple targets of interest in a video, and the second is the problem of associating data points, where each data point is assumed to represent the centroid of some target whose position varies with time. The first is a problem in the field of machine vision and may use data association techniques from the second to accomplish MTT after targets of interest are detected and their positions represented as points.\\
+%\\
+%The goal of this project is to apply the generalized Polya urn Dirichlet process mixture model (GPUDPM) to videos containing multiple targets in a way that accomplishes data association without requiring explicit target detection. We hope to allow for a single flexible MTT algorithm that can handle videos with different numbers of targets, with diverse backdrops, whose targets display a wide range of characteristics, and where there are time-varying shifts in targets' characteristics, perspectives, or orientations.\\
+%\\
+%\\
+%The following are summaries of papers focusing on MTT as it relates to the association of target centroids, MTT as it relates to machine vision, and the generalized Polya urn Dirichlet process mixture model.
+
+
+
+% Hue et al. \cite{hue, 2002} introduce particle filters for MTT. 
+
+%Oh et al. (Markov Chain Monte Carlo Data Association for General Multiple-Target Tracking Problems, 2004) uses an MCMC approach to perform general data association. 
+
+
+
+
+
+
+% VMTT
+%Papers on this topic often involve algorithms that have a target detection phase (where the centroids of potential targets are collected, often by looking for specific target features) and a data association phase (where the centroids are sequenced in order to carry out tracking).\\
 
 
 
