--- a/ltx/refs_lit_review.bib
+++ b/ltx/refs_lit_review.bib
@@ -97,13 +97,12 @@ pages = "451 - 460",
 year = "1975",
 note = "",
 issn = "0005-1098",
-doi = "DOI: 10.1016/0005-1098(75)90021-7",
-url = "http://www.sciencedirect.com/science/article/pii/0005109875900217",
-author = "Yaakov Bar-Shalom and Edison Tse"
+doi = "10.1016/0005-1098(75)90021-7",
+author = "Bar-Shalom and Tse"
 }
 
 @ARTICLE{kirubarajan_2004, 
-author={KIRUBARAJAN, T. and BAR-SHALOM, Y.}, 
+author={Kirubarajan, T. and Bar-Shalom, Y.}, 
 journal={Proceedings of the IEEE}, title={Probabilistic data association techniques for target tracking in clutter}, 
 year={2004}, 
 month={mar}, 
@@ -184,7 +183,7 @@ doi={10.1109/ICCV.2001.937594},
 ISSN={},}
 
 @INPROCEEDINGS{tao_2004, 
-author={Tao Zhao and Nevatia, R.}, 
+author={Zhao, T. and Nevatia, R.}, 
 booktitle={Computer Vision and Pattern Recognition, 2004. CVPR 2004. Proceedings of the 2004 IEEE Computer Society Conference on}, title={Tracking multiple humans in crowded environment}, 
 year={2004}, 
 month={june-2 july}, 
@@ -196,7 +195,7 @@ doi={10.1109/CVPR.2004.1315192},
 ISSN={1063-6919 },}
 
 @INPROCEEDINGS{ tao_1999,
-AUTHOR = "Hai Tao and Harpreet S. Sawhney and Rakesh Kumar",
+AUTHOR = "Tao, H. and Sawhney, H. S. and Kumar, R.",
 TITLE = "A Sampling Algorithm for Tracking Multiple Objects.",
 booktitle = "Workshop on Vision Algorithms'99",
 PAGES = {53-68},
@@ -215,7 +214,7 @@ doi={10.1109/34.927458},
 ISSN={0162-8828}}
 
 @ARTICLE{khan_2005, 
-author={Zia Khan and Balch, T. and Dellaert, F.}, 
+author={Khan, Z. and Balch, T. and Dellaert, F.}, 
 journal={Pattern Analysis and Machine Intelligence, IEEE Transactions on}, title={MCMC-based particle filtering for tracking a variable number of interacting targets}, 
 year={2005}, 
 month={nov. }, 
@@ -260,3 +259,417 @@ pages={2328 -2333 vol.3},
 keywords={ generalized gradient model; image processor; image sequence; moving object detection; optical flow extraction; real-time multiple object tracking; conjugate gradient methods; image sequences; optical tracking; real-time systems;}, 
 doi={10.1109/ROBOT.1995.525608}, 
 ISSN={1050-4729},}
+
+
+
+
+
+
+
+
+
+
+
+
+% new stuff from 2011-08-24
+
+
+
+
+
+
+
+
+
+% older MTT stuff / misc MTT stuff
+
+
+@article{lipton_1998,
+  title={Moving target classification and tracking from real-time video},
+  author={Lipton, A.J. and Fujiyoshi, H. and Patil, R.S.},
+  year={1998},
+  publisher={Published by the IEEE Computer Society}
+}
+
+
+
+
+
+
+
+
+
+
+% mean shift stuff / kernel based object tracking
+
+
+@article{fukunaga_1975,
+  title={The estimation of the gradient of a density function, with applications in pattern recognition},
+  author={Fukunaga, K. and Hostetler, L.},
+  journal={Information Theory, IEEE Transactions on},
+  volume={21},
+  number={1},
+  pages={32--40},
+  year={1975},
+  publisher={IEEE}
+}
+
+
+
+	% good overview paper on mean-shifting, generalizing k-means-like-algorithms, explanation of mode-seeking behavior
+	
+@article{cheng_1995,
+  title={Mean shift, mode seeking, and clustering},
+  author={Cheng, Y.},
+  journal={Pattern Analysis and Machine Intelligence, IEEE Transactions on},
+  volume={17},
+  number={8},
+  pages={790--799},
+  year={1995},
+  publisher={IEEE}
+}
+
+@inproceedings{comaniciu_1999,
+  title={Mean shift analysis and applications},
+  author={Comaniciu, D. and Meer, P.},
+  booktitle={Computer Vision, 1999. The Proceedings of the Seventh IEEE International Conference on},
+  volume={2},
+  pages={1197--1203},
+  year={1999},
+  organization={Ieee}
+}
+
+@INPROCEEDINGS{comaniciu_2000, 
+author={Comaniciu, D. and Ramesh, V. and Meer, P.}, 
+booktitle={Computer Vision and Pattern Recognition, 2000. Proceedings. IEEE Conference on}, 
+title={Real-time tracking of non-rigid objects using mean shift}, 
+year={2000}, 
+month={}, 
+volume={2}, 
+number={}, 
+pages={142 -149 vol.2}, 
+keywords={Bayesian framework;Bhattacharyya coefficient;clutter;color distribution;computational module;image sequences;mean shift iterations;most probable target position;moving camera;non-rigid object tracking;partial occlusions;real time tracking;target candidate;target model;target scale variations;Bayes methods;computer vision;image sequences;iterative methods;optical tracking;real-time systems;}, 
+doi={10.1109/CVPR.2000.854761}, 
+ISSN={},}
+
+	% main article on mean shift / kernel based methods for object tracking
+
+@ARTICLE{comaniciu_2003, 
+author={Comaniciu, D. and Ramesh, V. and Meer, P.}, 
+journal={Pattern Analysis and Machine Intelligence, IEEE Transactions on}, 
+title={Kernel-based object tracking}, 
+year={2003}, 
+month={may}, 
+volume={25}, 
+number={5}, 
+pages={ 564 - 577}, 
+keywords={ Bhattacharyya coefficient; Kalman tracking; background information; basin of attraction; camera motion; clutter; data association techniques; face tracking; feature histogram-based target representation; gradient-based optimization; isotropic kernel; kernel-based object tracking; local maxima; mean shift procedure; partial occlusion; spatial masking; spatially-smooth similarity functions; target localization; visual tracking; computer vision; image motion analysis; image representation; object recognition; optimisation; tracking;}, 
+doi={10.1109/TPAMI.2003.1195991}, 
+ISSN={0162-8828},}
+
+	% heirarchical mean-shift idea for spatio-temporal segmentation of video  - they cluster 7D data (R, G, B, d1, d1, motionangle1, motionangle2). good overview of terms at beginning. clustering is done using mean shift over increasingly larger ranges, using at each pass the cluster centers from previous pass with weights equal to number of points in cluster. applications are compression / compact scene descriptions.
+	
+@book{dementhon_2002,
+  title={Spatio-temporal segmentation of video by hierarchical mean shift analysis},
+  author={DeMenthon, D. and Megret, R. and University of Maryland (College Park, Md.). Computer Vision Laboratory},
+  year={2002},
+  publisher={Citeseer}
+}
+
+	% mean shift / kernel-based object detection with 'anisotropic kernel' whose shape/scale/orientation adapts to video (as opposed to the usual non-adaptive radially symmetric kernel)
+
+@article{wang_2004,
+  title={Image and video segmentation by anisotropic kernel mean shift},
+  author={Wang, J. and Thiesson, B. and Xu, Y. and Cohen, M.},
+  journal={Computer Vision-ECCV 2004},
+  pages={238--249},
+  year={2004},
+  publisher={Springer}
+}
+
+
+
+
+	%  new kernel based tracking stuff
+
+@INPROCEEDINGS{muyun_2006, 
+author={Weng Muyun and He Mingyi and Zhang Yifan}, 
+booktitle={Innovative Computing, Information and Control, 2006. ICICIC '06. First International Conference on}, title={An Adaptive Implementation of the Kernel-Based Object Tracking Method}, 
+year={2006}, 
+month={30 2006-sept. 1}, 
+volume={2}, 
+number={}, 
+pages={354 -357}, 
+keywords={KBOT;adaptive dynamic update principle;background clutter;camera motion;computer vision;feature histogram-based target representation;isotropic kernel;kernel-based object tracking method;target partial occlusion;visual tracking;adaptive filters;computer vision;feature extraction;hidden feature removal;object detection;optical tracking;target tracking;}, 
+doi={10.1109/ICICIC.2006.228}, 
+ISSN={},}
+
+@INPROCEEDINGS{mehmood_2009, 
+author={Mehmood, R. and Ali, M.U. and Taj, I.A.}, 
+booktitle={Information and Communication Technologies, 2009. ICICT '09. International Conference on}, title={Applying centroid based adjustment to kernel based object tracking for improving localization}, 
+year={2009}, 
+month={aug.}, 
+volume={}, 
+number={}, 
+pages={209 -214}, 
+keywords={Bhattacharya coefficient;KBOT;feature extraction;image colour analysis;image histogram;kernel based object tracking;mean shift centroid estimation;meanshift algorithm;feature extraction;image colour analysis;object detection;target tracking;}, 
+doi={10.1109/ICICT.2009.5267188}, 
+ISSN={},}
+
+
+
+
+
+
+
+
+
+
+
+
+% target appearance / motion related - ie anything related to extracting general features from target
+
+	% random color / appearance models
+	
+@INPROCEEDINGS{elgammal_2001,
+    author = {Ahmed Elgammal and Ramani Duraiswami and Larry S. Davis},
+    title = {Efficient non-parametric adaptive color modeling using fast gauss transform},
+    booktitle = {in Proc. IEEE Conf. Computer Vision and Pattern Recognition},
+    year = {2001},
+    pages = {563--570}
+}
+
+@inproceedings{senior_2002,
+  title={Tracking people with probabilistic appearance models},
+  author={Senior, A. and Hampapur, A. and Tian, YL and Brown, L. and Pankanti, S. and Bolle, R.},
+  booktitle={Proceedings of International Workshop on Performance Evaluation of Tracking and Surveillance (PETS) systems},
+  pages={48--55},
+  year={2002},
+  organization={Citeseer}
+}
+
+	% the following are some adaptive GMM-based appearance models
+
+@inproceedings{raja_1998,
+  title={Tracking and segmenting people in varying lighting conditions using colour},
+  author={Raja, Y. and McKenna, S.J. and Gong, S.},
+  booktitle={Automatic Face and Gesture Recognition, 1998. Proceedings. Third IEEE International Conference on},
+  pages={228--233},
+  year={1998},
+  organization={IEEE}
+}
+
+	%  note:  the following is object tracking using color by modeling the color (hue / saturation ?) of a tracked object with a GMM. the gaussian components are also updated as the lighting/colors change (how?). the next position is chosen based on how likely pixels are under the GMM? Also, it fixes number of components in the GMM? this isn't 1 component per object, but the GMM is modeling the color of the tracked object.
+
+@article{mckenna_1999,
+  title={Tracking colour objects using adaptive mixture models},
+  author={McKenna, S.J. and Raja, Y. and Gong, S.},
+  journal={Image and Vision Computing},
+  volume={17},
+  number={3-4},
+  pages={225--231},
+  year={1999},
+  publisher={Elsevier}
+}
+
+	% good overview article on appearance models of targets for object tracking
+
+@article{jepson_2003,
+  title={Robust online appearance models for visual tracking},
+  author={Jepson, A.D. and Fleet, D.J. and El-Maraghi, T.F.},
+  journal={IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  pages={1296--1311},
+  year={2003},
+  publisher={Published by the IEEE Computer Society}
+}
+
+	% color based tracking using mean-shift procedure
+
+@article{perez_2002,
+  title={Color-based probabilistic tracking},
+  author={P{\'e}rez, P. and Hue, C. and Vermaak, J. and Gangnet, M.},
+  journal={Computer Vision—ECCV 2002},
+  pages={661--675},
+  year={2002},
+  publisher={Springer}
+}
+
+	% color based tracking that somehow combines particle filter & mean-shift procedure, but is different than above paper (namely different than comaniciu_2003)
+
+@article{nummiaro_2003,
+  title={An adaptive color-based particle filter},
+  author={Nummiaro, K. and Koller-Meier, E. and Van Gool, L.},
+  journal={Image and Vision Computing},
+  volume={21},
+  number={1},
+  pages={99--110},
+  year={2003},
+  publisher={Elsevier}
+}
+
+	% another mean-shift color-based procedure
+
+@article{lee_2011,
+  title={Illumination change adaptive tracking based on color centroid shifting},
+  author={Lee, S.H. and Choi, E. and Kang, M.G.},
+  journal={Optical Engineering},
+  volume={50},
+  pages={057205},
+  year={2011}
+}
+
+
+
+
+
+
+
+
+
+
+
+	% frame differnecing / foreground detection / background subtraction / motion detection
+
+	% classic paper on figuring out if a pixel is foreground or background by modeling it as a mixture of gaussians
+
+@inproceedings{stauffer_1999,
+  title={Adaptive background mixture models for real-time tracking},
+  author={Stauffer, C. and Grimson, W.E.L.},
+  booktitle={Computer Vision and Pattern Recognition, 1999. IEEE Computer Society Conference on.},
+  volume={2},
+  year={1999},
+  organization={IEEE}
+}
+
+	% on detecting motion with a model based on movement of boundaries of objects
+
+@article{black_2000
+  title={Probabilistic detection and tracking of motion boundaries},
+  author={Black, M.J. and Fleet, D.J.},
+  journal={International Journal of Computer Vision},
+  volume={38},
+  number={3},
+  pages={231--245},
+  year={2000},
+  publisher={Springer}
+}
+
+	% more complex background subtraction. can handle slightly moving background. probabilistic in nature. very sensitive to movements.
+
+@article{elgammal_2000,
+  title={Non-parametric model for background subtraction},
+  author={Elgammal, A. and Harwood, D. and Davis, L.},
+  journal={Computer Vision—ECCV 2000},
+  pages={751--767},
+  year={2000},
+  publisher={Springer}
+}
+
+@article{elgammal_2002,
+  title={Background and foreground modeling using nonparametric kernel density estimation for visual surveillance},
+  author={Elgammal, A. and Duraiswami, R. and Harwood, D. and Davis, L.S.},
+  journal={Proceedings of the IEEE},
+  volume={90},
+  number={7},
+  pages={1151--1163},
+  year={2002},
+  publisher={IEEE}
+}
+
+	%  a new post processing step after GMM-based background subtraction 
+
+@inproceedings{turdu_2007,
+  title={Improved post-processing for GMM based adaptive background modeling},
+  author={Turdu, D. and Erdogan, H.},
+  booktitle={Computer and information sciences, 2007. iscis 2007. 22nd international symposium on},
+  pages={1--6},
+  organization={IEEE}
+}
+
+	% optical flow related
+
+@article{horn_1981,
+  title={Determining optical flow},
+  author={Horn, B.K.P. and Schunck, B.G.},
+  journal={Artificial intelligence},
+  volume={17},
+  number={1-3},
+  pages={185--203},
+  year={1981},
+  publisher={Elsevier}
+}
+
+@article{bobick_2001,
+  title={The recognition of human movement using temporal templates},
+  author={Bobick, A.F. and Davis, J.W.},
+  journal={Pattern Analysis and Machine Intelligence, IEEE Transactions on},
+  volume={23},
+  number={3},
+  pages={257--267},
+  year={2001},
+  publisher={IEEE}
+}
+
+
+
+
+
+
+
+% clustering on general target features for object tracking
+
+
+	% most similar thing?  GMM on image differencing that progresses over time and can adapt over time. 
+
+@article{pece_2002,
+  title={Generative-model-based tracking by cluster analysis of image differences},
+  author={Pece, A.E.C.},
+  journal={Robotics and Autonomous Systems},
+  volume={39},
+  number={3-4},
+  pages={181--194},
+  year={2002},
+  publisher={Elsevier}
+}
+
+	% background subtraction (with frame differencing), then the mean-shift procedure clusters motion-pixels and cluster centers appear at higher-density areas (which happen to be centers of targets), then mean shift continues to propagate tracking at each frame
+
+@article{beleznai_2006,
+  title={Human tracking by fast mean shift mode seeking},
+  author={Beleznai, C. and Fr{\\"u}hst{\\"u}ck, B. and Bischof, H.},
+  journal={Journal of Multimedia},
+  volume={1},
+  number={1},
+  pages={1--8},
+  year={2006},
+  publisher={Citeseer}
+}
+
+	% a pixel segmentation and region tracking algorithm. 
+
+@inproceedings{dickinson_2005,
+  title={Scene modelling using an adaptive mixture of Gaussians in colour and space},
+  author={Dickinson, P. and Hunter, A.},
+  booktitle={IEEE Conference on Advanced Video and Signal Based Surveillance, 2005.},
+  pages={64--69},
+  year={2005},
+  organization={IEEE}
+}
+
+% kind of different. finds homogenous color regions in a video and tracks each region.
+
+@article{schiele_2006,
+  title={Model-free tracking of cars and people based on color regions},
+  author={Schiele, B.},
+  journal={Image and Vision Computing},
+  volume={24},
+  number={11},
+  pages={1172--1178},
+  year={2006},
+  publisher={Elsevier}
+}
+
+
+
+
+
