fixed small errors in refs_lit_review.bib

--- a/ltx/lit_review.tex
+++ b/ltx/lit_review.tex
@@ -72,7 +72,7 @@ Foreground detection, frame differencing, background subtraction, and motion det
 Clustering Based Object Tracking \\
 a.k.a. Most Similar Things to Our Project \\
 \\
-Clustering based object tracking and detection schemes typically attempt to either detect objects or simultaneously detect and track objects using minimal, easily extracted, or general information about a scene and the targets within it. These techniques often start with foreground (e.g. movement) or color data from each frame in a video, and attempt to automatically perform segmentation and tracking with temporal clustering (where clusters are somehow present at or shared between multiple frames). This differs from blob-based tracking approaches, where a pixel is assigned to the foreground or to a specific, segmented blob (each of which represents a target) such as in \cite{stauffer_1999}. In \cite{pece_2002}, foreground positions are found via frame differencing and modelled with a sequence of GMMs\\
+Clustering based object tracking and detection schemes typically attempt to either detect objects or simultaneously detect and track objects using minimal, easily extracted, or general information about a scene and the targets within it. These techniques often start with foreground (e.g. movement) or color data from each frame in a video, and attempt to automatically perform segmentation and tracking with temporal clustering (where clusters are somehow present at or shared between multiple frames). This differs from blob-based tracking approaches, where a pixel is assigned to the foreground or to a specific, segmented blob (each of which represents a target) such as in \cite{stauffer_1999}. In \cite{pece_2002}, foreground positions are found via frame differencing and modeled with a sequence of GMMs.\\
 \cite{beleznai_2006}
 \cite{dickinson_2005}
 \cite{schiele_2006}
