--- a/ltx/refs_lit_review.bib
+++ b/ltx/refs_lit_review.bib
@@ -53,7 +53,7 @@ ISSN={1845-5921}
 author={Blackman, S.S.}, 
 journal={Aerospace and Electronic Systems Magazine, IEEE}, title={Multiple hypothesis tracking for multiple target tracking}, 
 year={2004}, 
-month={jan. }, 
+month={jan.}, 
 volume={19}, 
 number={1}, 
 pages={5 -18}, 
@@ -69,7 +69,7 @@ year={1979},
 month={dec}, 
 volume={24}, 
 number={6}, 
-pages={ 843 - 854}, 
+pages={843 - 854}, 
 keywords={ Bayes procedures; Tracking;}, 
 doi={10.1109/TAC.1979.1102177}, 
 ISSN={0018-9286}
@@ -144,7 +144,7 @@ year={2006},
 month={29 2006-nov. 1}, 
 volume={}, 
 number={}, 
-pages={2009 -2013}, 
+pages={2009-2013}, 
 keywords={Dirichlet processes;data association;large scale multi-target tracking;nonparametric Bayesian methods;state space models;Bayes methods;nonparametric statistics;target tracking;}, 
 doi={10.1109/ACSSC.2006.355118}, 
 ISSN={1058-6393},}
@@ -243,9 +243,9 @@ ISSN={1063-6919 }}
  title = "Tracking Groups of People",
  journal = "CVIU(80), No",
  volume = "1",
- month = oct,
+ month = "oct",
  pages = "42--56",
- year = 2000
+ year = "2000"
 }
 
 @INPROCEEDINGS{yamamoto_1995, 
@@ -543,7 +543,7 @@ ISSN={},}
 
 	% on detecting motion with a model based on movement of boundaries of objects
 
-@article{black_2000
+@article{black_2000,
   title={Probabilistic detection and tracking of motion boundaries},
   author={Black, M.J. and Fleet, D.J.},
   journal={International Journal of Computer Vision},
@@ -583,7 +583,8 @@ ISSN={},}
   author={Turdu, D. and Erdogan, H.},
   booktitle={Computer and information sciences, 2007. iscis 2007. 22nd international symposium on},
   pages={1--6},
-  organization={IEEE}
+  organization={IEEE},
+  year={2007}
 }
 
 	% optical flow related
