new literature review, almost complete and extensive

--- a/ltx/refs_lit_review.bib
+++ b/ltx/refs_lit_review.bib
@@ -292,7 +292,36 @@ ISSN={1050-4729},}
 }
 
 
+@article{khan_2004,
+  title={An MCMC-based particle filter for tracking multiple interacting targets},
+  author={Khan, Z. and Balch, T. and Dellaert, F.},
+  journal={Computer Vision-ECCV 2004},
+  pages={279--290},
+  year={2004},
+  publisher={Springer}
+}
 
+
+
+
+
+
+
+
+
+
+% Visual Object Tracking (VOT)
+
+@article{yilmaz_2006,
+  title={Object tracking: A survey},
+  author={Yilmaz, A. and Javed, O. and Shah, M.},
+  journal={Acm Computing Surveys (CSUR)},
+  volume={38},
+  number={4},
+  pages={13},
+  year={2006},
+  publisher={ACM}
+}
 
 
 
@@ -390,6 +419,7 @@ ISSN={0162-8828},}
 
 
 
+
 	%  new kernel based tracking stuff
 
 @INPROCEEDINGS{muyun_2006, 
@@ -416,6 +446,22 @@ keywords={Bhattacharya coefficient;KBOT;feature extraction;image colour analysis
 doi={10.1109/ICICT.2009.5267188}, 
 ISSN={},}
 
+
+
+
+
+
+
+% Bayesian Filter Stuff
+
+@inproceedings{vermaak_2003,
+  title={Maintaining multimodality through mixture tracking},
+  author={Vermaak, J. and Doucet, A. and P{\'e}rez, P.},
+  booktitle={Computer Vision, 2003. Proceedings. Ninth IEEE International Conference on},
+  pages={1110--1116},
+  year={2003},
+  organization={IEEE}
+}
 
 
 
@@ -611,6 +657,42 @@ ISSN={},}
   publisher={IEEE}
 }
 
+% segmentation stuff
+
+@article{yang_2006,
+  title={Nuclei segmentation using marker-controlled watershed, tracking using mean-shift, and Kalman filter in time-lapse microscopy},
+  author={Yang, X. and Li, H. and Zhou, X.},
+  journal={Circuits and Systems I: Regular Papers, IEEE Transactions on},
+  volume={53},
+  number={11},
+  pages={2405--2414},
+  year={2006},
+  publisher={IEEE}
+}
+
+@inproceedings{gallego_2009,
+  title={Bayesian foreground segmentation and tracking using pixel-wise background model and region based foreground model},
+  author={Gallego, J. and Pardas, M. and Haro, G.},
+  booktitle={Image Processing (ICIP), 2009 16th IEEE International Conference on},
+  pages={3205--3208},
+  year={2009},
+  organization={IEEE}
+}
+
+@article{mchugh_2009,
+  title={Foreground-adaptive background subtraction},
+  author={McHugh, J.M. and Konrad, J. and Saligrama, V. and Jodoin, P.M.},
+  journal={Signal Processing Letters, IEEE},
+  volume={16},
+  number={5},
+  pages={390--393},
+  year={2009},
+  publisher={IEEE}
+}
+
+
+
+
 
 
 
@@ -618,6 +700,33 @@ ISSN={},}
 
 
 % clustering on general target features for object tracking
+
+
+
+% blob detection
+
+@article{wren_1997,
+  title={Pfinder: Real-time tracking of the human body},
+  author={Wren, C.R. and Azarbayejani, A. and Darrell, T. and Pentland, A.P.},
+  journal={Pattern Analysis and Machine Intelligence, IEEE Transactions on},
+  volume={19},
+  number={7},
+  pages={780--785},
+  year={1997},
+  publisher={IEEE}
+}
+
+@article{kjeldsen_1996,
+  title={Toward the use of gesture in traditional user interfaces},
+  author={Kjeldsen, R. and Kender, J.},
+  journal={fg},
+  pages={151},
+  year={1996},
+  publisher={Published by the IEEE Computer Society}
+}
+
+
+
 
 
 	% most similar thing?  GMM on image differencing that progresses over time and can adapt over time. 
@@ -637,7 +746,7 @@ ISSN={},}
 
 @article{beleznai_2006,
   title={Human tracking by fast mean shift mode seeking},
-  author={Beleznai, C. and Fr{\\"u}hst{\\"u}ck, B. and Bischof, H.},
+  author={Beleznai, C. and Fr{\"u}hst{\"u}ck, B. and Bischof, H.},
   journal={Journal of Multimedia},
   volume={1},
   number={1},
@@ -645,6 +754,20 @@ ISSN={},}
   year={2006},
   publisher={Citeseer}
 }
+
+
+	% similar to beleznai above---mean-shift on frame-differenced pixels ?
+
+@inproceedings{chu_2007,
+  title={Object tracking algorithm based on CamShift algorithm combinating with difference in frame},
+  author={Chu, H. and Ye, S. and Guo, Q. and Liu, X.},
+  booktitle={Automation and Logistics, 2007 IEEE International Conference on},
+  pages={51--55},
+  year={2007},
+  organization={IEEE}
+}
+
+
 
 	% a pixel segmentation and region tracking algorithm. 
 
