--- a/ltx/refs_lit_review.bib
+++ b/ltx/refs_lit_review.bib
@@ -746,7 +746,7 @@ ISSN={},}
 
 @article{beleznai_2006,
   title={Human tracking by fast mean shift mode seeking},
-  author={Beleznai, C. and Fr{\"u}hst{\"u}ck, B. and Bischof, H.},
+  author={Beleznai, C. and Fr{\\"u}hst{\\"u}ck, B. and Bischof, H.},
   journal={Journal of Multimedia},
   volume={1},
   number={1},
