i updated the paper draft with the new model

--- a/ltx/model/model.tex
+++ b/ltx/model/model.tex
@@ -19,8 +19,7 @@
 	\font\nipstenhv  = phvb at 8pt
 
 
-\newcommand{\matlab}[1]
-{\centerline{\parbox{.9\textwidth}{\noindent\textsc{\bf MATLAB:} #1}}}
+\newcommand{\matlab}[1] {\centerline{\parbox{.9\textwidth}{\noindent\textsc{\bf MATLAB:} #1}}}
 
 \newcommand{\code}[1]{\texttt{#1}}
 
